added tests for API endpoints

--- a/OrderApi/appsettings.json
+++ b/OrderApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "SecretKey": "your_secret_key_here",
+    "SecretKey": "this is my secret key for order api",
     "ValidIssuer": "your_issuer_here",
     "ValidAudience": "your_audience_here"
   }
